Add support for Intel C++ Compiler
Support version 14 or later.

--- a/src/impex/CMakeLists.txt
+++ b/src/impex/CMakeLists.txt
@@ -32,7 +32,7 @@ IF (MSVC OR MINGW)
     IF(NOT VIGRA_STATIC_LIB)
         ADD_DEFINITIONS(-DVIGRA_DLL)
     ENDIF()
-ELSEIF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
+ELSEIF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX OR CMAKE_COMPILER_IS_INTELCXX)
     IF(VIGRA_STATIC_LIB)
         ADD_DEFINITIONS(-fPIC -DPIC)
     ENDIF()
